--- a/source/ThemeHelpers/ThemeHelpers.csproj
+++ b/source/ThemeHelpers/ThemeHelpers.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Addons\ThemeContentPhoneAddon.cs" />
     <Compile Include="Addons\ThemeHeaderNavbarULAddon.cs" />
     <Compile Include="Addons\ThemeHeaderNavbarLiListAddon.cs" />
     <Compile Include="Addons\ThemeContentSocialMediaLinksAddon.cs" />
